<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/admin_search"
        android:icon="@android:drawable/ic_menu_search"
        android:title=""
        app:showAsAction="always"></item>
</menu>